add configuration in 'user preferences' and 'setup' to show/hide the Hint created with PMA_createqTip function

--- a/Documentation.html
+++ b/Documentation.html
@@ -1373,6 +1373,9 @@ CREATE DATABASE,ALTER DATABASE,DROP DATABASE</pre>
     main panel's list (except on the Export page). This limit is also enforced in the navigation panel
     when in Light mode.</dd>
 
+    <dt id="cfg_ShowHint">$cfg['ShowHint'] boolean</dt>
+    <dd>Whether to show the hints or not (for example, hints when hovering table header)</dd>
+
     <dt id="cfg_MaxCharactersInDisplayedSQL">$cfg['MaxCharactersInDisplayedSQL'] integer</dt>
     <dd>The maximum number of characters when a SQL query is displayed. The
     default limit of 1000 should be correct to avoid the display of tons
