Remove inline edit feature

--- a/Documentation.html
+++ b/Documentation.html
@@ -1961,7 +1961,7 @@ $cfg['TrustedProxies'] =
 
     <dt><span id="cfg_RowActionLinks">$cfg['RowActionLinks'] </span>string
     </dt>
-    <dd>Defines the place where table row links (Edit, Inline edit, Copy,
+    <dd>Defines the place where table row links (Edit, Copy,
         Delete) would be put when tables contents are displayed (you may
         have them displayed at the left side, right side, both sides or nowhere).
         &quot;left&quot; and &quot;right&quot; are parsed as &quot;top&quot;
