remove another mention of Excel export

--- a/Documentation.html
+++ b/Documentation.html
@@ -2002,11 +2002,9 @@ $cfg['TrustedProxies'] =
         The name of the directory where temporary files can be stored. 
         <br /><br />
 
-        This is needed for native MS Excel export, see
-        <a href="#faq6_23"><abbr title="Frequently Asked Questions">FAQ</abbr>
-		6.23</a> and to work around limitations of 
-	<tt>open_basedir</tt> for uploaded
-        files, see <a href="#faq1_11"><abbr title="Frequently Asked Questions">FAQ</abbr>
+        This is needed to work around limitations of <tt>open_basedir</tt> 
+        for uploaded files, see
+        <a href="#faq1_11"><abbr title="Frequently Asked Questions">FAQ</abbr>
         1.11</a>.
         <br /><br />
 
