--- a/Documentation.html
+++ b/Documentation.html
@@ -1086,9 +1086,9 @@ ALTER TABLE `pma_column_comments`
     </dt>
     <dd>
         Since release 3.5.0 phpMyAdmin can be configured to remember several things
-        (table sorting
+        (sorted column
         <a href="#cfg_RememberSorting" class="configrule">$cfg['RememberSorting']</a>
-        , etc.) for browsing tables.
+        , column order, and column visibility from a database table) for browsing tables.
         Without configuring the storage, these features still can be used,
         but the values will disappear after you logout.<br/><br/>
 
@@ -1222,6 +1222,17 @@ CREATE DATABASE,ALTER DATABASE,DROP DATABASE</pre>
                 </li>
         </ul>
     </dd>
+
+    <dt><span id="cfg_Servers_MaxTableUiprefs">$cfg['Servers'][$i]['MaxTableUiprefs']</span> integer
+    </dt>
+    <dd>Maximum number of records saved in <a
+        href="#cfg_Servers_table_uiprefs">$cfg['Servers'][$i]['table_uiprefs']</a> table.<br /><br />
+
+        In case where tables in databases is modified (e.g. dropped or renamed),
+        table_uiprefs may contains invalid data (referring to tables which are not
+        exist anymore).<br />
+        This configuration make sure that we only keep N (N = MaxTableUiprefs)
+        newest record in table_uiprefs and automatically delete older records.</dd>
 
     <dt><span id="cfg_Servers_verbose_check">$cfg['Servers'][$i]['verbose_check']</span> boolean
     </dt>
