Row is a better term for record

--- a/Documentation.html
+++ b/Documentation.html
@@ -1645,7 +1645,7 @@ CREATE DATABASE,ALTER DATABASE,DROP DATABASE</pre>
 
     <dt id="cfg_ShowAll">$cfg['ShowAll'] boolean</dt>
     <dd>Defines whether a user should be displayed a
-        &quot;show all (records)&quot; button in browse mode or not.</dd>
+        &quot;show all (rows)&quot; button in browse mode or not.</dd>
 
     <dt id="cfg_MaxRows">$cfg['MaxRows'] integer</dt>
     <dd>Number of rows displayed when browsing a result set. If the result set
@@ -3239,7 +3239,7 @@ the <tt>mysql_upgrade</tt> command on the server.</p>
     please upgrade to a plain revision.</p>
 
 <h4 id="faq2_5">
-    <a href="#faq2_5">2.5 Each time I want to insert or change a record or drop a database
+    <a href="#faq2_5">2.5 Each time I want to insert or change a row or drop a database
     or a table, an error 404 (page not found) is displayed or, with <abbr title="HyperText Transfer Protocol">HTTP</abbr> or
     cookie authentication, I'm asked to log in again. What's wrong?</a></h4>
 
@@ -3478,7 +3478,7 @@ have either the <a href="http://pecl.php.net/package/APC">APC</a> extension
     can use it for the Edit and Delete links.</p>
 
 <h4 id="faq3_11">
-    <a href="#faq3_11">3.11 The number of records for InnoDB tables is not correct.</a></h4>
+    <a href="#faq3_11">3.11 The number of rows for InnoDB tables is not correct.</a></h4>
 
 <p> phpMyAdmin uses a quick method to get the row count, and this method
     only returns an approximate count in the case of InnoDB tables. See
@@ -5029,8 +5029,8 @@ Jakub Wilk, Thomas Michael Winningham, Vilius Zigmantas, &quot;Manuzhai&quot;.
     <li><a href="http://www.wikipedia.org/wiki/Field_%28computer_science%29">Field</a>
          - one part of divided data/columns.</li>
     <li><a href="http://www.wikipedia.org/wiki/Foreign_key">foreign key</a>
-         - a field or group of fields in a database record that point to a key
-         field or group of fields forming a key of another database record in some
+         - a field or group of fields in a database row that point to a key
+         field or group of fields forming a key of another database row in some
          (usually different) table.</li>
     <li><a href="http://www.fpdf.org/">FPDF (FreePDF)</a>
         - the free PDF library</li>
