--- a/Documentation.html
+++ b/Documentation.html
@@ -5121,7 +5121,7 @@ Jakub Wilk, Thomas Michael Winningham, Vilius Zigmantas, &quot;Manuzhai&quot;.
          Internet technologies.</li>
     <li><a href="http://www.ietf.org/rfc/rfc1952.txt">RFC 1952</a>
          - GZIP file format specification version 4.3</li>
-    <li><a href="http://www.wikipedia.org/wiki/Row_%28database%29">Row (record, tulpel)</a>
+    <li><a href="http://www.wikipedia.org/wiki/Row_%28database%29">Row (record, tuple)</a>
         - represents a single, implicitly structured data item in a table.</li>
     <li><a href="http://www.wikipedia.org/wiki/Server_%28computing%29">Server</a>
          - a computer system that provides services to other computing
