In this context, field is really a column

--- a/Documentation.html
+++ b/Documentation.html
@@ -5029,8 +5029,8 @@ Jakub Wilk, Thomas Michael Winningham, Vilius Zigmantas, &quot;Manuzhai&quot;.
     <li><a href="http://www.wikipedia.org/wiki/Field_%28computer_science%29">Field</a>
          - one part of divided data/columns.</li>
     <li><a href="http://www.wikipedia.org/wiki/Foreign_key">foreign key</a>
-         - a field or group of fields in a database row that point to a key
-         field or group of fields forming a key of another database row in some
+         - a column or group of columns in a database row that point to a key
+         column or group of columns forming a key of another database row in some
          (usually different) table.</li>
     <li><a href="http://www.fpdf.org/">FPDF (FreePDF)</a>
         - the free PDF library</li>
