Mention the use of TempDir for ESRI Shapefile imports

--- a/Documentation.html
+++ b/Documentation.html
@@ -2088,9 +2088,10 @@ $cfg['TrustedProxies'] =
         The name of the directory where temporary files can be stored. 
         <br /><br />
 
-        This is needed to work around limitations of <tt>open_basedir</tt> 
-        for uploaded files, see
-        <a href="#faq1_11"><abbr title="Frequently Asked Questions">FAQ</abbr>
+        This is needed for importing ESRI Shapefiles, see
+        <a href="#faq6_30"><abbr title="Frequently Asked Questions">FAQ</abbr>
+        6.30</a> and to work around limitations of <tt>open_basedir</tt> for uploaded
+        files, see <a href="#faq1_11"><abbr title="Frequently Asked Questions">FAQ</abbr>
         1.11</a>.
         <br /><br />
 
