Credits in docs

--- a/Documentation.html
+++ b/Documentation.html
@@ -4850,10 +4850,11 @@ Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
   <li>BLOBstreaming support</li>
 </ul></li>
 
-<li>Piotr Przybylski (Google Summer of Code 2008 and 2010)
+<li>Piotr Przybylski (Google Summer of Code 2008, 2010 and 2011)
 <ul>
   <li>improved setup script</li>
   <li>user preferences</li>
+  <li>Drizzle support</li>
 </ul></li>
 
 <li>Derek Schaefer (Google Summer of Code 2009)
