Move PMD help to documentation

--- a/Documentation.html
+++ b/Documentation.html
@@ -4409,6 +4409,14 @@ chmod o+rwx tmp
         </li>
     </ul>
 
+<h4 id="faq6_31">
+    <a href="#faq6_31">6.30 How do I create a relation in designer?</a></h4>
+
+    <p>To select relation, click :</p>
+
+    <img src="pmd/images/help_relation.png"></p>
+    <p>The display column is shown in pink. To set/unset a column as the display column, click the "Choose column to display" icon, then click on the appropriate column name.</p>
+
 <h3 id="faqproject">phpMyAdmin project</h3>
 
 <h4 id="faq7_1">
