--- a/Documentation.html
+++ b/Documentation.html
@@ -4420,9 +4420,9 @@ chmod o+rwx tmp
 <h4 id="faq6_32">
     <a href="#faq6_32">6.32 How can I use the zoom search feature?</a></h4>
 
-    <p> Zoom search feature is an alternative to table search feature. It allows you to explore  
+    <p> The Zoom search feature is an alternative to table search feature. It allows you to explore  
     a table by representing its data in a scatter plot. You can locate this feature by selecting
-    a table and clicking the 'Search' tab. One of the sub-tab in the 'Table Search' page is 
+    a table and clicking the 'Search' tab. One of the sub-tabs in the 'Table Search' page is 
     'Zoom Search'. <br/><br/>
 
     Consider the table REL_persons in <a href="#faq6_6"><abbr title="Frequently Asked Questions">
@@ -4443,7 +4443,7 @@ chmod o+rwx tmp
     In addition, panning feature is enabled to navigate through the plot. You can zoom-in to
     a certail level of detail and use panning to locate your area of interest. Clicking on a
     point opens a dialogue box, displaying field values of the data row represented by the point.
-    You can edit the values if required and and click on submit to issue an update query. Basic
+    You can edit the values if required and click on submit to issue an update query. Basic
     instructions on how to use can be viewed by clicking the 'How to use?' link located just above
     the plot.</p>
 
