--- a/Documentation.html
+++ b/Documentation.html
@@ -5,8 +5,8 @@ vim: expandtab ts=4 sw=4 sts=4 tw=78
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-US"
     version="-//W3C//DTD XHTML 1.1//EN" dir="ltr">
 <head>
-    <link rel="icon" href="./favicon.ico" type="image/x-icon" />
-    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <meta charset="utf-8" />
     <title>phpMyAdmin 4.0.0-dev - Documentation</title>
     <link rel="stylesheet" type="text/css" href="docs.css" />
