Replaced <acronym> with <abbr> in Doc.html for HTML5 validity

--- a/Documentation.html
+++ b/Documentation.html
@@ -180,14 +180,14 @@ vim: expandtab ts=4 sw=4 sts=4 tw=78
 </p>
 
 <p class="important">
-    Warning for <acronym title="Apple Macintosh">Mac</acronym> users:<br />
-    if you are on a <acronym title="Apple Macintosh">Mac</acronym>
+    Warning for <abbr title="Apple Macintosh">Mac</abbr> users:<br />
+    if you are on a <abbr title="Apple Macintosh">Mac</abbr>
     <abbr title="operating system">OS</abbr> version before
     <abbr title="operating system">OS</abbr> X, StuffIt unstuffs with
-    <acronym title="Apple Macintosh">Mac</acronym> formats.<br />
+    <abbr title="Apple Macintosh">Mac</abbr> formats.<br />
     So you'll have to resave as in BBEdit to Unix style ALL phpMyAdmin scripts
     before uploading them to your server, as PHP seems not to like
-    <acronym title="Apple Macintosh">Mac</acronym>-style end of lines character
+    <abbr title="Apple Macintosh">Mac</abbr>-style end of lines character
     (&quot;<code>\r</code>&quot;).</p>
 
 <h3 id="quick_install">Quick Install</h3>
@@ -565,9 +565,9 @@ since this link provides funding for phpMyAdmin.
 <!-- CONFIGURATION -->
 <h2 id="config">Configuration</h2>
 
-<p> <span class="important">Warning for <acronym title="Apple Macintosh">Mac</acronym>
+<p> <span class="important">Warning for <abbr title="Apple Macintosh">Mac</abbr>
     users:</span> PHP does not seem to like
-    <acronym title="Apple Macintosh">Mac</acronym> end of lines character
+    <abbr title="Apple Macintosh">Mac</abbr> end of lines character
     (&quot;<code>\r</code>&quot;). So ensure you choose the option that allows to use
     the *nix end of line character (&quot;<code>\n</code>&quot;) in your text editor
     before saving a script you have modified.</p>
@@ -3833,7 +3833,7 @@ $cfg['Servers'][$i]['AllowDeny']['rules'] = array(
     recent versions of the most browsers.</p>
 
 <h4 id="faq5_12">
-    <a href="#faq5_12">5.12 <acronym title="Apple Macintosh">Mac</acronym> <abbr title="operating system">OS</abbr> X: Safari browser changes special characters to
+    <a href="#faq5_12">5.12 <abbr title="Apple Macintosh">Mac</abbr> <abbr title="operating system">OS</abbr> X: Safari browser changes special characters to
     &quot;?&quot;.</a></h4>
 
 <p> This issue has been reported by a <abbr title="operating system">OS</abbr> X user, who adds that Chimera,
@@ -5115,7 +5115,7 @@ Jakub Wilk, Thomas Michael Winningham, Vilius Zigmantas, &quot;Manuzhai&quot;.
     <li><a href="http://www.wikipedia.org/wiki/Mac">Mac (Apple Macintosh)</a>
          - line of personal computers is designed, developed, manufactured, and
          marketed by Apple Computer.</li>
-    <li><a id="glossar_mac_os_x" href="http://www.wikipedia.org/wiki/Mac_OS_X"><acronym title="Apple Macintosh">Mac</acronym> <abbr title="operating system">OS</abbr> X</a>
+    <li><a id="glossar_mac_os_x" href="http://www.wikipedia.org/wiki/Mac_OS_X"><abbr title="Apple Macintosh">Mac</abbr> <abbr title="operating system">OS</abbr> X</a>
         - the operating system which is included with all currently shipping Apple
         Macintosh computers in the consumer and professional markets.</li>
     <li><a href="http://www.wikipedia.org/wiki/MCrypt">MCrypt</a>
@@ -5136,7 +5136,7 @@ Jakub Wilk, Thomas Michael Winningham, Vilius Zigmantas, &quot;Manuzhai&quot;.
     <li><a href="http://www.wikipedia.org/wiki/OpenDocument">OpenDocument</a>
          - open standard for office documents.</li>
     <li><a href="http://www.wikipedia.org/wiki/OS_X"><abbr title="operating system">OS</abbr> X</a>
-         - look at <a href="#glossar_mac_os_x"><acronym title="Apple Macintosh">Mac</acronym> <abbr title="operating system">OS</abbr> X</a>.</li>
+         - look at <a href="#glossar_mac_os_x"><abbr title="Apple Macintosh">Mac</abbr> <abbr title="operating system">OS</abbr> X</a>.</li>
     <li><a href="http://www.wikipedia.org/wiki/Portable_Document_Format">PDF
             (Portable Document Format)</a>
          - a file format developed by Adobe Systems for representing two
