--- a/Documentation.html
+++ b/Documentation.html
@@ -118,7 +118,7 @@ vim: expandtab ts=4 sw=4 sts=4 tw=78
     title="International Electrotechnical Commission">IEC</abbr> 26300 -
     OpenDocument Text and Spreadsheet,
     <abbr title="Microsoft Word 2000">Word</abbr>,
-    and L<sup>A</sup>T<sub><big>E</big></sub>X formats
+    and L<sup>A</sup>T<sub><em class="big">E</em></sub>X formats
         </li>
     <li>import data and MySQL structures from OpenDocument spreadsheets, as well as <abbr title="Extensible Markup Language">XML</abbr>, <abbr title="Comma Separated Values">CSV</abbr>, and <abbr title="Server Query Language">SQL</abbr> files</li>
     <li>administer multiple servers</li>
@@ -4274,10 +4274,10 @@ INSERT INTO REL_towns VALUES ('M', 'Montr&eacute;al');
     positioned &quot;/**/&quot; comments.</p>
 
 <h4 id="faq6_19">
-    <a href="#faq6_19">6.19 How can I create simple L<sup>A</sup>T<sub><big>E</big></sub>X document to
+    <a href="#faq6_19">6.19 How can I create simple L<sup>A</sup>T<sub><em class="big">E</em></sub>X document to
     include exported table?</a></h4>
 
-<p> You can simply include table in your L<sup>A</sup>T<sub><big>E</big></sub>X documents, minimal sample
+<p> You can simply include table in your L<sup>A</sup>T<sub><em class="big">E</em></sub>X documents, minimal sample
     document should look like following one (assuming you have table
     exported in file <code>table.tex</code>):</p>
 
@@ -5110,7 +5110,7 @@ Jakub Wilk, Thomas Michael Winningham, Vilius Zigmantas, &quot;Manuzhai&quot;.
          photographic images.</li>
     <li>JPG - look at <a href="#jpeg">JPEG</a>.</li>
     <li>Key - look at <a href="#glossar_index">index</a>.</li>
-    <li><a href="http://www.wikipedia.org/wiki/LaTeX">L<sup>A</sup>T<sub><big>E</big></sub>X</a>
+    <li><a href="http://www.wikipedia.org/wiki/LaTeX">L<sup>A</sup>T<sub><em class="big">E</em></sub>X</a>
          - a document preparation system for the T<sub>E</sub>X typesetting program.</li>
     <li><a href="http://www.wikipedia.org/wiki/Mac">Mac (Apple Macintosh)</a>
          - line of personal computers is designed, developed, manufactured, and
