add Dieter Adriaenssens to credits

--- a/Documentation.html
+++ b/Documentation.html
@@ -4969,6 +4969,12 @@ along with this program.  If not, see <a href="http://www.gnu.org/licenses/">htt
   <li>Italian translation updates</li>
 </ul></li>
 
+<li>Dieter Adriaenssens
+<ul>
+  <li>Various bugfixes</li>
+  <li>Dutch translation updates</li>
+</ul></li>
+
 </ul>
 
 <p>
