modified Documentation regarding global.inc.php

--- a/Documentation.html
+++ b/Documentation.html
@@ -2528,8 +2528,8 @@ setfacl -d -m "g:www-data:rwx" tmp
     for, but pay attention to option usage as well as what the transformation does to your
     column.</p>
 
-<p> There is a basic file called '<em>global.inc.php</em>'. This function can be included by
-    any other transform function and provides some basic functions.</p>
+<p> There is a file called '<em>transformations.lib.php</em>' that provides some basic functions
+    which can be included by any other transform function.</p>
 
 <p> There are 5 possible file names:</p>
 
