Better implementation of rfe #3488185 using a jQuery UI dialog

--- a/Documentation.html
+++ b/Documentation.html
@@ -4488,6 +4488,17 @@ chmod o+rwx tmp
     instructions on how to use can be viewed by clicking the 'How to use?' link located just above
     the plot.</p>
 
+<h4 id="faq6_33">
+    <a href="#faq6_33">6.33 When browsing a table, how can I copy a column name?</a></h4>
+
+    <p>Selecting the name of the column within the browse table header cell for copying is difficult,
+    as the columns support reordering by dragging the header cells as well as sorting by clicking on
+    the linked column name.<br/><br/>
+
+    To copy a column name, double-click on the empty area next to the column name,
+    when the tooltip tells you to do so. This will show you an input box with the column name.
+    You may right-click the column name within this input box to copy it to your clipboard.</p>
+
 <h3 id="faqproject">phpMyAdmin project</h3>
 
 <h4 id="faq7_1">
