--- a/Documentation.html
+++ b/Documentation.html
@@ -1662,6 +1662,10 @@ CREATE DATABASE,ALTER DATABASE,DROP DATABASE</pre>
     <dd>Defines whether the database structure page (tables list) has a 
         &quot;Last update&quot; column that displays when each table was last updated.</dd>
 
+    <dt id="cfg_ShowDbStructureLastCheck">$cfg['cfg_ShowDbStructureLastCheck'] boolean</dt>
+    <dd>Defines whether the database structure page (tables list) has a 
+        &quot;Last check&quot; column that displays when each table was last checked.</dd>
+
     <dt id="cfg_NavigationBarIconic">$cfg['NavigationBarIconic'] string</dt>
     <dd>Defines whether navigation bar buttons and the right panel top menu
         contain text or symbols only. A value of TRUE displays icons, FALSE
