Finish implementation of HideStructureActions

--- a/Documentation.html
+++ b/Documentation.html
@@ -1612,6 +1612,10 @@ CREATE DATABASE,ALTER DATABASE,DROP DATABASE</pre>
         &quot;tbl_sql.php&quot;, &quot;tbl_select.php&quot;,
         &quot;tbl_change.php&quot; or &quot;sql.php&quot;.</dd>
 
+    <dt id="cfg_HideStructureActions">$cfg['HideStructureActions'] boolean</dt>
+    <dd>Defines whether the table structure actions are hidden under a 
+        &quot;More&quot; drop-down.</dd>
+
     <dt id="cfg_ShowStats">$cfg['ShowStats'] boolean</dt>
     <dd>Defines whether or not to display space usage and statistics about databases
         and tables.<br />
